--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Welcome to diokey</title>
+    </head>
+    <body>
+    <p>List of my projects</p>
+    <ul>
+        <li>JS-Excel-HeatMap</li>
+        <li>UMS</li>
+        <li>Pharmacy</li>
+        <li>Cathedral</li>
+    </ul>
+    </body>
+</html>
