--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" style="border-radius:50%" src="http://www.gravatar.com/avatar/28afb1e2a1363054789c5233d945acab?200" alt="Olivier Dusabimana">
+                    <img class="img-responsive" style="border-radius:50%" src="http://www.gravatar.com/avatar/28afb1e2a1363054789c5233d945acab?s=200" alt="Olivier Dusabimana">
                     <div class="intro-text">
                         <span class="name">Olivier DUSABIMANA</span>
                         <hr class="star-light">
