--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <p>This page showcase some of the applications i've been working on lately</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                  <p>I'm looking for opportunities to work on node.js applications</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
