--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Olivier DUSABIMANA</a>
+                <a class="navbar-brand" href="#page-top">Hi, I'm Olivier</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
