--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Hi, I'm Olivier</a>
+                <a class="navbar-brand" href="#page-top">Olivier DUSABIMANA</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,9 +76,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" style="border-radius:50%" src="http://www.gravatar.com/avatar/28afb1e2a1363054789c5233d945acab?s=200" alt="Olivier Dusabimana">
                     <div class="intro-text">
-                        <span class="name">Olivier DUSABIMANA</span>
+                        <span class="name">Hi, I'm Olivier</span>
                         <hr class="star-light">
-                        <span class="skills">Java - Javascript - Node.js - Angular.js - Android</span>
+                        <span class="skills">I'm a Java - Javascript - Node.js - Angular.js - Android developer</span>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                  <p>This page showcase some of the applications i've been working on lately</p>
+                  <p>I'm a Software engineer who like to work on different type of project. 
+                    I'm now very hooked with node.js. I've been experiment new ECMAScript features
+                    and some cool javascript design patterns
+                  </p>
                 </div>
                 <div class="col-lg-4">
                   <p>I'm looking for opportunities to work on node.js applications</p>
