--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                  <p>I'm a Software engineer who like to work on different type of project. 
+                  <p>I'm a Software engineer who like to work on different type of projects. 
                     I'm now very hooked with node.js. I've been experiment new ECMAScript features
                     and some cool javascript design patterns
                   </p>
                 </div>
                 <div class="col-lg-4">
-                  <p>I'm looking for opportunities to work on node.js applications</p>
+                  <p>See some of my work</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
