--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
                   </p>
                 </div>
                 <div class="col-lg-4">
-                  <p>See some of my work</p>
+                  <p>I'm from Burundi, and i am currently doing a Global Health corps fellowship program in Boston
+                  I have strong interest in public health, health information system and electronic medical records
+                  In the past i have worked with some health software such as DHIS, OpenMRS, Commcare
+                  </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
