--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>About GHC Fellowshop program</h3>
+                        <p><a href="http://ghcorps.org">Global Health Corps</a> is a year long fellowship program that pair young professional from all around the world, train them, and allow them to work on the world most challenging issues in public health.</p>
                     </div>
                 </div>
             </div>
