--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About GHC Fellowshop program</h3>
-                        <p><a href="http://ghcorps.org">Global Health Corps</a> is a year long fellowship program that pair young professional from all around the world, train them, and allow them to work on the world most challenging issues in public health.</p>
+                        <p><a href="http://ghcorps.org">Global Health Corps</a> is a year long fellowship program that pair young professional from all around the world, train them, and allow them to work on the world most challenging issues in public health. Go to the GHC website to learn more about the fellowship</p>
                     </div>
                 </div>
             </div>
