--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                 </div>
                 <div class="col-lg-4">
                   <p>I'm from Burundi, and i am currently doing a Global Health corps fellowship program in Boston
-                  I have strong interest in public health, health information system and electronic medical records
-                  In the past i have worked with some health software such as DHIS, OpenMRS, Commcare
+                  I have strong interest in public health
+                  In the past i have worked with some health information software such as DHIS, OpenMRS, Commcare
                   </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
