Updated contact infos

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                   <p>I'm a Software engineer who like to work on different type of projects. 
-                    I'm now very hooked with node.js. I've been experiment new ECMAScript features
-                    and some cool javascript design patterns
+                    I'm now very hooked with node.js. I've been experiment ECMAScript 6 features
+                    and some other Javascript design patterns
                   </p>
                 </div>
                 <div class="col-lg-4">
@@ -252,7 +252,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>I am located in Boston, but am looking for positions all over the country. If you are interested in working with me, shoot me an email or use one of my social media accounts and I will get back to you</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -276,7 +276,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About GHC Fellowshop program</h3>
-                        <p><a href="http://ghcorps.org">Global Health Corps</a> is a year long fellowship program that pair young professional from all around the world, train them, and allow them to work on the world most challenging issues in public health. Go to the GHC website to learn more about the fellowship</p>
+                        <p><a href="http://ghcorps.org">Global Health Corps</a> is a year long fellowship program that pair young professional from all around the world, train them, and allow them to work on the world most challenging issues in public health.</p>
                     </div>
                 </div>
             </div>
