Added my github account

--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
                 <div class="col-lg-4 col-lg-offset-2">
                   <p>I'm a Software engineer who like to work on different type of projects. 
                     I'm now very hooked with node.js. I've been experiment ECMAScript 6 features
-                    and some other Javascript design patterns
+                    and some other Javascript design patterns.
+
+                    Check and / or follow some of my projects on <a href="https://github.com/diokey">github</a> 
                   </p>
                 </div>
                 <div class="col-lg-4">
