--- a/index.html
+++ b/index.html
@@ -504,11 +504,11 @@
                             <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
                             <p>Easily getting started with node.js. This project helps you bootstrap your node.js apps and easily deploy them on openshift and herouku</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
+                                <li>Built with:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
                                 </li>
-                                <li>Date:
+                                <li>Demo:
                                     <strong><a href="http://startbootstrap.com">April 2014</a>
                                     </strong>
                                 </li>
