--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" style="border-radius:50%" src="http://www.gravatar.com/avatar/28afb1e2a1363054789c5233d945acab?s=200" alt="Olivier Dusabimana">
+                    <img class="img-responsive" style="border-radius:50%" src="https://www.gravatar.com/avatar/28afb1e2a1363054789c5233d945acab?s=200" alt="Olivier Dusabimana">
                     <div class="intro-text">
                         <span class="name">Hi, I'm Olivier</span >
                         <hr class="star-light">
@@ -170,11 +170,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                  <p>I'm a Software engineer who like to work on different type of projects. 
+                  <p>I'm a Software engineer who like to work on different type of projects.
                     I'm now very hooked with node.js. I've been experiment ECMAScript 6 features
                     and some other Javascript design patterns.
 
-                    Check and / or follow some of my projects on <a href="https://github.com/diokey">github</a> 
+                    Check and / or follow some of my projects on <a href="https://github.com/diokey">github</a>
                   </p>
                 </div>
                 <div class="col-lg-4">
